--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+/* *{
+    margin: 0;
+    padding: 0;
+} */
+
 /* common shared style */
 body{
     font-family: "Open Sans", sans-serif;
@@ -44,12 +50,48 @@ nav a{
 /* header related style */
 .header{
     background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner .profile-pic{
     width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-tittle{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+}
+.banner-content{
+    width: 500px;
+}
+
+/* about section styles */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+.section-tittle{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
