--- a/style.css
+++ b/style.css
@@ -102,10 +102,31 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 150px;
+}
 .about-info-container{
     display: flex;
     justify-content: space-around;
 }
 .about-info{
     text-align: center;
+}
+
+/* skills realted style */
+#what-i-do-description{
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
 }
