completed resume section

--- a/style.css
+++ b/style.css
@@ -137,3 +137,22 @@ main section{
     font-size: 30px;
     font-weight: 700;
 }
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-description, .resume-item-institute{
+    color: #757575;
+}
+.resume-item-tittle{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.down-cv{
+    text-align: center;
+    margin-top: 50px;
+}
