--- a/style.css
+++ b/style.css
@@ -156,3 +156,29 @@ main section{
     text-align: center;
     margin-top: 50px;
 }
+
+/* footer style */
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.contact input, textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: white;
+    border: 0;
+    width: 100%;
+}
+.contact input[type="text"], .contact input[type="email"],
+.social-links a{
+        margin-right: 25px;
+}
